fixed api swagger docs
