# docs/swagger.json
@@ -1,13 +1,26 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a URL shortener service.",
+        "title": "URL shortening API",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/example/helloworld": {
-            "get": {
-                "description": "do ping",
+        "/data/shorten": {
+            "post": {
+                "description": "generate shortened urls",
                 "consumes": [
                     "application/json"
                 ],
@@ -17,14 +30,68 @@
                 "tags": [
                     "example"
                 ],
-                "summary": "ping example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
+                "summary": "generate shortened urls",
+                "parameters": [
+                    {
+                        "description": "Add URL for shortening",
+                        "name": "longUrl",
+                        "in": "body",
+                        "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.LongUrl"
                         }
                     }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/main.ShortenedUrl"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/main.HTTPError"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "main.HTTPError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 400
+                },
+                "message": {
+                    "type": "string",
+                    "example": "status bad request"
+                }
+            }
+        },
+        "main.LongUrl": {
+            "type": "object",
+            "properties": {
+                "longUrl": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.ShortenedUrl": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "longUrl": {
+                    "type": "string"
+                },
+                "shortUrl": {
+                    "type": "string"
                 }
             }
         }
